# ProjectManager

./: CMakeLists.txt  README.md  main.cpp  projectmanager.cpp  projectmanager.h
tools/: install.sh
